tests/fixtures/errors/e0111_bad_qualifier.mimz
// expect: E0111
import e0110_support.other

module M {
  let u = nope.Fifo() { }
}
